fix(page-header-new): hide overflow

--- a/components/page-header-new/page-header-new.less
+++ b/components/page-header-new/page-header-new.less
@@ -39,10 +39,11 @@
 }
 
 .page-header-new__animation-background {
-	position: absolute;
-	left: 0;
-	width: 100%;
 	height: 100%;
+	left: 0;
+	overflow: hidden;
+	position: absolute;
+	width: 100%;
 }
 
 .page-header-new__animation-triangle {
@@ -89,13 +90,13 @@
 }
 
 .page-header-new__content {
-	display: flex;
-	z-index: 0;
-	flex-direction: column;
 	align-items: center;
-	justify-content: center;
+	display: flex;
+	flex-direction: column;
 	height: 100%;
+	justify-content: center;
 	margin-bottom: 0;
+	z-index: 0;
 }
 
 .page-header-new__title {
